# utilitools

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/collection/: flatten.rst  islice.rst  partial.rst  singleton.rst  subscriptable.rst  subscription.rst
docs/source/: conf.py  index.rst  singleton.rst  subscriptable.rst
notebooks/: singleton.ipynb  subscriptable.ipynb
utilitools/: __init__.py  islice.py  partial.py  singleton.py  subscriptable.py  subscription.py
utilitools/tests/: test_flatten.py  test_islice.py  test_partial.py  test_singleton.py  test_subscriptable.py
utilitools/utilities/: flatten.py  islice.py  partial.py  singleton.py  subscription.py
