[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'utilitools'
description = 'A collection of utilities.'
readme = 'README.md'
license = {text = 'MIT'}
authors = [{name = 'Idan Hazan'}]
keywords= ['utilities']
classifiers = [
    'Programming Language :: Python :: 3',
    'Topic :: Utilities',
    'License :: OSI Approved :: MIT License',
]
requires-python = '>= 3.8'
dynamic = ['version']

[project.urls]
homepage = 'https://github.com/idanhazan/utilitools'
repository = 'https://github.com/idanhazan/utilitools'
documentation = 'https://utilitools.readthedocs.io'

[tool.setuptools]
packages = ['utilitools']

[tool.setuptools.dynamic.version]
attr = 'utilitools.__version__'